Succfully test front and backend connection.

--- a/Veil-of-Reality/Base.lproj/Main.storyboard
+++ b/Veil-of-Reality/Base.lproj/Main.storyboard
@@ -22,11 +22,17 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Test Button"/>
+                                <connections>
+                                    <action selector="didTapActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x7X-Zq-eKN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="actionButton" destination="9m8-JR-C2S" id="2s0-Lc-0Xx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
